# haskell-concurrency-patterns

./: README.md  concurrent-tests.cabal
app/: Search10.hs  Search20.hs  Search21.hs  Search30.hs
src/: Lib.hs
